<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <!-- Global -->
    <string name="app_name" translatable="false">TruckMonitor</string>

    <!-- Login -->
    <string name="login_title">Sign\nIn</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in_action">Sign In</string>

    <!-- Error Alert -->
    <string name="alert_error_no_internet_connection_title">No internet connection</string>
    <string name="alert_error_no_internet_connection_description">Please connect the Internet connection in the system settings.</string>
    <string name="alert_error_server_not_available_title">Server is not available</string>
    <string name="alert_error_server_not_available_description">Please try again later.</string>
    <string name="alert_error_invalid_email_password_title">Authorisation Error</string>
    <string name="alert_error_invalid_email_password_description">Wrong Email or Password.</string>
    <string name="alert_error_unknown_title">Unknown error</string>
    <string name="alert_error_unknown_description">Please report the error to the developers, we will eliminate it in the shortest time.</string>
    <string name="alert_error_positive">Close</string>

    <!-- Main -->
    <string name="main_tab_info">Info</string>
    <string name="main_tab_check_point">Check Points</string>
    <string name="main_tab_map">Map</string>

    <!-- Navigation -->
    <string name="navigation_home">Home</string>
    <string name="navigation_history">History</string>
    <string name="navigation_user_info">Info</string>
    <string name="navigation_about">About</string>
    <string name="navigation_log_out">Log out</string>

    <!-- Info -->
    <string name="info_user_name">User name:</string>
    <string name="info_user_birth_date">Birth date:</string>
    <string name="info_user_email">Email:</string>
    <string name="info_user_phone">Phone:</string>

    <!-- History -->
    <string name="history_date_header_format" translatable="false">%1$s - %2$s</string>
    <string name="history_title_archive">Archive</string>
    <string name="history_title_onward">Onward</string>

    <!-- Contracts -->
    <string name="contract_stores_format" translatable="false">%1$s - %2$s</string>

    <!-- Detail Contract -->
    <string name="detail_contract_title">Detail contract</string>
    <string name="detail_contract_contract_number_format">Contract number: %1$s</string>
    <string name="detail_contract_store_before">Point of departure:</string>
    <string name="detail_contract_store_from">Destination:</string>
    <string name="detail_contract_manager">Manager:</string>
    <string name="detail_contract_customs_link">Customs declarations:</string>
    <string name="detail_contract_nomenclatures">Cargo composition:</string>
    <string name="detail_contract_nomenclature_amount">Amount: %1$s %2$s</string>
    <string name="detail_contract_nomenclature_packaging">Packaging: %1$s</string>

    <!-- Check Point -->
    <string name="check_point_planned">Scheduled time: %1$s</string>
    <string name="check_point_fact">Actual time: %1$s</string>
    <string name="check_point_qr_scanner">QR Scanner</string>

</resources>
