<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail_contract">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/txt_contract_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            tools:text="@string/detail_contract_contract_number_format" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/detail_contract_store_before"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_store_before_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:textColor="@color/secondary_text"
            tools:text="ООО ПензаДор" />

        <TextView
            android:id="@+id/txt_store_before_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            tools:text="г. Пенза, ул. Московская, 00" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/detail_contract_store_from"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_store_from_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:textColor="@color/secondary_text"
            tools:text="ООО ПензаДор" />

        <TextView
            android:id="@+id/txt_store_from_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            tools:text="г. Пенза, ул. Московская, 00" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/detail_contract_manager"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_manager_photo"
                android:layout_width="56dp"
                android:layout_height="56dp"
                tools:ignore="ContentDescription"
                tools:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_manager_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    tools:text="Иванов Иван Иванович" />

                <TextView
                    android:id="@+id/txt_manager_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    tools:text="8 (800) 000 00 00" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/detail_contract_customs_link"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_customs_link"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/detail_contract_nomenclatures"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_nomenclature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/item_detail_contract" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>